--- a/index.html
+++ b/index.html
@@ -2,8 +2,24 @@
     <head>
         <title>Curso Visualización y Análisis de Datos</title>
 
+
+        <script src="js/d3.js"></script>
+  
+        <link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons">
+        <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,300italic,500,400italic,700,700italic' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="//storage.googleapis.com/code.getmdl.io/1.0.1/material.teal-red.min.css" />
+        <link rel="stylesheet" href="./css/estilos.css" />
+    <script src="//storage.googleapis.com/code.getmdl.io/1.0.1/material.min.js"></script>
+
     </head>
     <body>
+            
+        <h3><a href="practica1/">Práctica 1</a></h3>
+
+        <h3><a href="practica2/">Práctica 2</a></h3>
+
+        <h3><a href="practica3/">Práctica 3</a></h3>
+
 
     </body>
 </html>
