--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 
         <h3><a href="practica3/">Práctica 3</a></h3>
 
+        <h3><a href="practica4/">Práctica 4</a></h3>
+
+        <h3><a href="practica5/">Práctica 5</a></h3>
+
 
     </body>
 </html>
